--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -7,6 +7,8 @@ on:
       - main
     paths:
       - plugins/**
+  schedule:
+    - cron: '30 5 * * 1,3'
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
