--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "extends": ["github>ffxivita/.github"],
+    "extends": ["github>ffxivita/.github"]
 }
